added create preset button, bug fixed for the stackform inline_formfactory

--- a/generator/templates/generator/details.html
+++ b/generator/templates/generator/details.html
@@ -8,6 +8,6 @@
 </ul>
 
 <h2>languages used in project</h2>
-{% for s in stack %}
-<li>{{s.languages}}</li>
+{% for s in stacks %}
+<p>{{s.languages}}</p>
 {% endfor %}
