update : deletion feature added, now presets can be deleted. deletion comfirmation page set.

--- a/generator/templates/generator/details.html
+++ b/generator/templates/generator/details.html
@@ -13,3 +13,4 @@
 {% endfor %}
 
 <a href="{% url 'generator:updatePreset' display_preset.pk%}"><button type="submit">Update Preset</button></a>
+<a href="{% url 'generator:deletePreset' display_preset.pk%}"><button type="submit">Delete Preset</button></a>
